# wgc-cpp

./: CMakeLists.txt  README.md
include/wgc/: wgc_algorithms.h  wgc_bytebuffer.h  wgc_future.h  wgc_job_thread.h  wgc_memory.h  wgc_named_thread.h  wgc_sequence.h
src/: wgc_bytebuffer.cpp  wgc_job_thread.cpp  wgc_named_thread.cpp
